Fix extra margin in conditional empty buttons

--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -383,6 +383,14 @@
                         padding-bottom: 20px;
                         margin-bottom: 20px;
                         border-bottom: 1px solid @cryptpad_text_col;
+                        .cp-form-condition {
+                            .btn-danger-alt,
+                            .btn-secondary {
+                                svg {
+                                    margin: 0;
+                                }
+                            }
+                        }
                     }
                 }
 
